erDiagram
    users {
        INTEGER id PK
        TEXT full_name
        TEXT email
        TEXT password
        TEXT phone
        DATETIME created_at
    }

    sports {
        INTEGER id PK
        TEXT name
        TEXT icon
    }

    user_sports {
        INTEGER id PK
        INTEGER user_id FK
        INTEGER sport_id FK
    }

    games {
        INTEGER id PK
        INTEGER creator_id FK
        INTEGER sport_id FK
        TEXT title
        TEXT description
        TEXT location
        TEXT date
        TEXT time
        INTEGER players_needed
        INTEGER current_players
        TEXT status
        DATETIME created_at
    }

    game_participants {
        INTEGER id PK
        INTEGER game_id FK
        INTEGER user_id FK
        DATETIME joined_at
    }

    locations {
        INTEGER id PK
        TEXT name
        TEXT description
        TEXT address
        TEXT facilities
        TEXT available_sports
    }

    users ||--o{ user_sports : "has"
    sports ||--o{ user_sports : "has"
    users ||--o{ games : "creates"
    sports ||--o{ games : "is of type"
    users ||--o{ game_participants : "participates in"
    games ||--o{ game_participants : "has"